# kinetix

./: .env.example  .gitignore  README.md  _roadmap_extract.txt  docker-compose.app.yml  docker-compose.env.example  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  kinetix-site.conf  kinetix-staging-site.conf  nginx.conf
backend-py/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend-py/app/: __init__.py  config.py  main.py
backend-py/scripts/: bootstrap_local_db.py  burst_api_test.py  check_channel_creator.py  check_comment_attachments.py  check_comment_response.py  check_comment_with_attachment.py  check_db.py  check_local_db.py  check_oauth_db.py  check_oauth_tables.py  create_message_attachments.sql  delete_user.py  delete_user_by_email.sql  delete_workspaces_by_name.py  diagnose_channel_delete.py  lookup_workspace_owners.py  migrate_channel_created_by.sql  migrate_chat_enhancements.sql  migrate_google_oauth.sql  migrate_invite_invited_by_cascade.sql  migrate_lineup_recents.sql  migrate_list_status_followers.sql  migrate_space_is_personal.sql  migrate_super_admin_role.sql  migrate_task_comment_attachments.sql  migrate_task_comment_threads.sql  migrate_task_dates_time.sql  migrate_task_subtasks_attachments.sql  migrate_teams.sql  repair_channel_creators.py  repair_channel_creators.sql  run_channel_created_by_migration.py  run_chat_enhancements_migration.py  run_lineup_recents_migration.py  run_list_status_followers_migration.py  run_message_attachments_migration.py  run_space_is_personal_migration.py  (+22 more)
(+454 files in other folders)
