[project]
name = "riseup-backend-py"
version = "0.1.0"
description = "Kinetix API — FastAPI + SQLAlchemy (Python/uv)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "pydantic[email]>=2.10.0",
  "pydantic-settings>=2.6.0",
  "pyjwt>=2.10.0",
  "bcrypt>=4.2.0,<5",
  "python-multipart>=0.0.12",
  "httpx>=0.28.0",
  "python-socketio>=5.11.0",
  "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[project.scripts]
riseup-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
